[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optymus"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "kcosta", email = "kleyton.vsc@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "nbformat>=4.2.0",
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "tqdm>=4.66.4",
  "pandas==2.0.3",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "scikit-learn>=1.5.0",
  "numpy==1.26.4"
  ]


[project.urls]
Documentation = "https://github.com/quant-sci/optymus#readme"
Issues = "https://github.com/quant-sci/optymus/issues"
Source = "https://github.com/quant-sci/optymus"

[tool.hatch.version]
path = "src/optymus/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/optymus tests}"

[tool.coverage.run]
source_pkgs = ["optymus", "tests"]
branch = true
parallel = true
omit = ["src/optymus/__about__.py"]

[tool.coverage.paths]
optymus = ["src/optymus", "*/optymus/src/optymus"]
tests = ["tests", "*/optymus/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend = "ruff_default.toml"
exclude = ["docs/**", "tests/**", "tutorials/**"]

[tool.hatch.envs.docs]
dependencies = [
  "pydata-sphinx-theme==0.15.2",
  "sphinx_design==0.5.0",
  "sphinx_togglebutton==0.3.2",
  "sphinxcontrib.youtube==1.4.1",
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "ipython"
]

[tool.hatch.envs.docs.scripts]
foo = ["which sphinx-build"]
build = ["bash docs/source/build.sh"]


[tool.hatch.envs.testing]
dependencies = [
  "nbformat>=4.2.0",
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "tqdm>=4.66.4",
  "pandas>=2.2.2",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "scikit-learn>=1.5.0",
]
paths = ["./src"]

[tool.hatch.envs.testing.scripts]
run = ["python -m pytest"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optymus"]