[project]
name = "optymus"
version = "0.1.11"
description = "Optimization methods in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "numpy==1.26.4",
  "tqdm>=4.60",
  "scipy>=1.12",
  ]

[project.urls]
Homepage = "https://github.com/quant-sci/optymus"
"Bug Tracker" = "https://github.com/quant-sci/optymus/issues"

[project.optional-dependencies]
dev = [
    "pytest~=8.2",         # For running tests
    "black~=24.4",         # For code formatting
    "ruff~=0.4",           # For lintingent
]

testing = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "numpy==1.26.4",
  "tqdm>=4.60",
  "scipy>=1.12",
  ]

docs = [
    "pydata-sphinx-theme==0.15.2",
    "sphinx_design==0.5.0",
    "sphinx_togglebutton==0.3.2",
    "sphinxcontrib.youtube==1.4.1",
    "sphinx_copybutton==0.5.2",
    "myst_parser==3.0.1",
    "nbsphinx==0.9.4",
    "ipython==8.25.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
